Dialogue text generation with unique stopping criteria, and gitignore.

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +94,8 @@
    "source": [
     "optimizer = torch.optim.Adam(gpt2_model.parameters(), lr=0.0001)\n",
     "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
     "epochs = 10\n",
     "epoch_losses = []\n",
     "\n",
@@ -104,14 +106,9 @@
     "    for sequence in train_loader:\n",
     "        optimizer.zero_grad()   \n",
     "        \n",
-    "        print(\"a\")\n",
     "        loss, logits = gpt2_model(sequence, labels=sequence)[:2]\n",
-    "        print(\"a\")\n",
-    "        print(loss.grad_fn)\n",
     "        loss.backward()\n",
-    "        print(\"a\")\n",
     "        optimizer.step()\n",
-    "        print(\"a\")\n",
     "\n",
     "        epoch_loss += loss.item()\n",
     "        pb.update(1)\n",
