--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import torch\n",
     "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
+    "from transformers.models.gpt2.modeling_gpt2 import *\n",
     "from data_collection import training_set\n",
     "from torch.utils.data import DataLoader\n",
     "import tqdm\n",
@@ -19,9 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/linulun/anaconda3/lib/python3.11/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
     "gpt2_model = GPT2LMHeadModel.from_pretrained(\"gpt2\")"
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,13 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load model\n",
     "trained_model_data = pickle.load(open(save_name, \"rb\"))\n",
-    "gpt2_model = trained_model_data[\"model\"]\n",
+    "state_dict = trained_model_data[\"state_dict\"]\n",
+    "gpt2_model.load_state_dict(state_dict)\n",
     "epoch_losses = trained_model_data[\"loss\"]"
    ]
   },
@@ -161,13 +172,13 @@
     "    epoch_losses.append(epoch_loss)\n",
     "    print(f\"Epoch {epoch} loss: {epoch_loss}\")\n",
     "\n",
-    "pickle.dump({ \"model\": gpt2_model.to(torch.device(\"cpu\")), \"loss\": epoch_losses },\n",
+    "pickle.dump({ \"state_dict\": gpt2_model.state_dict(), \"loss\": epoch_losses },\n",
     "            open(save_name, \"wb\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "main",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
