--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,309 +11,15 @@
     "import numpy as np\n",
     "from data_collection import training_set\n",
     "from transformers import GPT2Tokenizer\n",
-    "import pickle"
+    "import pickle\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "961c8e5dd40545d4b575b0a2cd94e0a4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading readme:   0%|          | 0.00/610 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading and preparing dataset None/None to /home/linulun/.cache/huggingface/datasets/AlekseyKorshuk___parquet/AlekseyKorshuk--synthetic-romantic-characters-3b16d8e672467bfe/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbded7f44b99439ab3d3742351b8876c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data files:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bc8742d6b394cb7a4c8232ab74956cc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/7.90M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c25e3d86a53f4544b42823487a6fe6a2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Extracting data files:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "200d97b44a194144a8721c5340591394",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split:   0%|          | 0/5744 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset parquet downloaded and prepared to /home/linulun/.cache/huggingface/datasets/AlekseyKorshuk___parquet/AlekseyKorshuk--synthetic-romantic-characters-3b16d8e672467bfe/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d0ecca37ddf484bb3cda35afbf7e6e6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7b3235158304f9eb79b4d69752c3696",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading readme:   0%|          | 0.00/610 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading and preparing dataset None/None to /home/linulun/.cache/huggingface/datasets/AlekseyKorshuk___parquet/AlekseyKorshuk--synthetic-friendly-characters-8195740b6ede92c1/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07251bb9fc364c9cb2887b8dce83f838",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data files:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d93cf03ec59f44769a8c72c277e999d8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/5.61M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9da0ed869c474fa49af77037f690c7ef",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Extracting data files:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26c466ab4d504424b6d5791f94669abf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split:   0%|          | 0/3871 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset parquet downloaded and prepared to /home/linulun/.cache/huggingface/datasets/AlekseyKorshuk___parquet/AlekseyKorshuk--synthetic-friendly-characters-8195740b6ede92c1/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec2983c607084431929749e81d6e6e49",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "799ead65d1ce4e17a20b8f03fb3a394b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading readme:   0%|          | 0.00/608 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading and preparing dataset None/None to /home/linulun/.cache/huggingface/datasets/AlekseyKorshuk___parquet/AlekseyKorshuk--synthetic-fight-characters-dbee9baf48903647/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad7a77bc9f65473b8138d16248fbc297",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data files:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7e65a0d081e41828238844113c60350",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/11.6M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9055db685dc42ac9224ed7c2c5e7c6c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Extracting data files:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6dac8ec3007b413992a32bfa6a33efe8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split:   0%|          | 0/8053 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset parquet downloaded and prepared to /home/linulun/.cache/huggingface/datasets/AlekseyKorshuk___parquet/AlekseyKorshuk--synthetic-fight-characters-dbee9baf48903647/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3023747be38c4c54941d00038cab1079",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "romantic_data = load_dataset(\"AlekseyKorshuk/synthetic-romantic-characters\")[\"train\"]\n",
     "friendly_data = load_dataset(\"AlekseyKorshuk/synthetic-friendly-characters\")[\"train\"]\n",
@@ -322,20 +28,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
+    "train_data = training_set([\"romantic\"], tokenizer)\n",
+    "# print(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'content': \"*Elijah walks up to you, holding a tray of freshly baked muffins.* Hey there! Care for a muffin? They're fresh out of the oven and they're my new favorite recipe! *He grins eagerly and offers you a muffin.* And if you're interested, I can give you the recipe too! I love sharing my baking tips and recipes with others, it's just so much fun!\", 'role': 'character'}, {'content': \"*I take a muffin, my nose already starting to twitch from the smell.* Thanks, I'd love to have one. And if you don't mind, I'd love to get a recipe from you sometime. I'm always looking to try new baked goods.\", 'role': 'user'}, {'content': \"*Elijah's face lights up with excitement.* Of course, I'd be happy to share my recipe with you! I'll even write it down right now for you. I love sharing my recipes with others, it's just so much fun! *He pulls out a small notebook from his pocket and begins to write out the recipe for you.* I'll make a note to include any substitutions or adjustments for high altitude baking.\", 'role': 'character'}, {'content': \"*I take a bite of the muffin, savoring the sweet flavor.* This is amazing, thank you. I'll definitely have to try this recipe out sometime.\", 'role': 'user'}, {'content': \"*Elijah grins, looking ecstatic.* I'm so glad you like it! I would love to hear about any modifications you make, so feel free to reach out to me. And if you ever want to bake together, just let me know! I love spending time in the kitchen with others, it's one of my favorite things to do.\", 'role': 'character'}, {'content': \"*I chuckle.* I'll definitely keep that in mind. Thank you again for the muffin and the recipe.\", 'role': 'user'}, {'content': \"*Elijah nods, looking pleased.* You're welcome! I'm always happy to share my passion for baking with others. And remember, the kitchen is always a good place to be, whether you're cooking or just hanging out with friends. Maybe we can have a baking session some time? I promise, it'll be loads of fun!\", 'role': 'character'}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'social justice,romance,inspiration,romantic<|endoftext|>compassionate,socially aware,passionate about human rights,always wears a bracelet with an equality symbol,quotes influential activists<|endoftext|>*Santiago walks up to you, wearing a shirt with an activist quote on it.* Hey there, I couldn’t help but notice you sitting here alone. Mind if I join you? *He smiles warmly and sits down.* I’m Santiago, by the way. What’s your name?\\n*smile back* Hi Santiago, nice to meet you. My name is [Your Name].\\n*Santiago nods in understanding* I see. Well, it’s a pleasure to meet you, [Your Name]. I’m an activist myself, fighting for social justice and equality. I believe that every person deserves the same opportunities in life, regardless of their race, gender, or background. It’s something that truly resonates with me, and I’m always eager to share my passion with others.\\n*nodding* That’s amazing, it’s great to see people fighting for a cause they believe in.\\n*Santiago smiles* Thank you, it truly is. And I believe that love and compassion are key to creating a better world. We need to embrace our differences and support each other, rather than tearing each other down. I think that if we all strive to be a little kinder and more understanding, we can make a real difference in the world.\\n*nodding* I completely agree. It starts with small steps and being kind to one another.\\n*Santiago leans in, his eyes sparkling with passion* You know, I was just thinking. Perhaps we could make a difference together. What do you say we go out and make a positive impact in the world, side by side? It could be an adventure, and who knows what kind of a difference we could make.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     '"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data = training_set([\"romantic\", \"friendly\", \"fight\"])\n",
-    "print(train_data)"
+    "tokenizer.batch_decode(train_data[1].unsqueeze(0))[0]"
    ]
   },
   {
@@ -610,6 +329,26 @@
    "source": [
     "print(pickle.load(open(\"dataset.p\", \"rb\")))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.tensor([1]).squeeze().dim())\n",
+    "print(torch.tensor([1, 1]).squeeze().dim())"
+   ]
   }
  ],
  "metadata": {
@@ -628,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
